--- a/TradeHubGui/MainWindow.xaml
+++ b/TradeHubGui/MainWindow.xaml
@@ -37,6 +37,7 @@
             <x:Array x:Key="Contents" Type="UserControl">
                 <views:DashboardView/>
                 <views:StrategyRunnerView/>
+                <views:MarketDataScannerView/>
                 <views:OrdersView/>
                 <views:DataDownloaderView/>
             </x:Array>
@@ -279,7 +280,7 @@
                                       HorizontalAlignment="Left" UseLayoutRounding="True">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
-                                        <GroupBox Header="{Binding ServiceName}" Padding="0,0,8,2" Margin="0,0,0,4">
+                                    <GroupBox Header="{Binding ServiceName}" Padding="0,0,8,2" Margin="0,0,0,4">
                                         <DockPanel>
                                             <CheckBox DockPanel.Dock="Right" Content="Enabled" 
                                                       IsChecked="{Binding Enabled, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -362,15 +363,20 @@
             </ListBoxItem>
             <ListBoxItem Style="{StaticResource NavigationListBoxItemStyle}" Tag="{Binding Source={StaticResource Contents}, Path=[1]}">
                 <Border Background="Transparent" ToolTip="Strategy Runner">
-                    <Image Width="32" Height="32" Source="{StaticResource imgStrategyRunner}" Margin="14,10,10,10"/>
+                    <Image Width="36" Height="32" Source="{StaticResource imgStrategyRunner}" Margin="10,10,10,10"/>
                 </Border>
             </ListBoxItem>
             <ListBoxItem Style="{StaticResource NavigationListBoxItemStyle}" Tag="{Binding Source={StaticResource Contents}, Path=[2]}">
-                <Border Background="Transparent" ToolTip="Orders">
-                    <Image Width="32" Height="32" Source="{StaticResource imgActiveOrders}" Margin="14,10,10,10"/>
+                <Border Background="Transparent" ToolTip="Market Data Scanner">
+                    <Image Width="32" Height="32" Source="{StaticResource imgMarketDataScanner}" Margin="14,10,10,10"/>
                 </Border>
             </ListBoxItem>
             <ListBoxItem Style="{StaticResource NavigationListBoxItemStyle}" Tag="{Binding Source={StaticResource Contents}, Path=[3]}">
+                <Border Background="Transparent" ToolTip="Orders">
+                    <Image Width="32" Height="32" Source="{StaticResource imgActiveOrders}" Margin="10,10,10,10"/>
+                </Border>
+            </ListBoxItem>
+            <ListBoxItem Style="{StaticResource NavigationListBoxItemStyle}" Tag="{Binding Source={StaticResource Contents}, Path=[4]}">
                 <Border Background="Transparent" ToolTip="Data Downloader">
                     <Image Width="32" Height="32" Source="{StaticResource imgDataDownloader}" Margin="14,10,10,10"/>
                 </Border>
