--- a/TradeHubGui/MainWindow.xaml
+++ b/TradeHubGui/MainWindow.xaml
@@ -146,6 +146,17 @@
                     <TextBox Grid.Column="1" Text="{Binding CredentialValue, UpdateSourceTrigger=PropertyChanged}"/>
                 </Grid>
             </DataTemplate>
+
+            <DataTemplate x:Key="GenericDataTemplate">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" SharedSizeGroup="lblGroup"/>
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Column="0" Content="{Binding CredentialName, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Grid.Column="1" Text="{Binding CredentialValue, UpdateSourceTrigger=PropertyChanged}"/>
+                </Grid>
+            </DataTemplate>
         </ResourceDictionary>
     </mah:MetroWindow.Resources>
 
