(TH-179) Added context menu for item in market scanner DataGrid, created needed commands and properties for context menu, implemented basic UI logic for creating new scanner document

--- a/Lib/Xceed.Wpf.AvalonDock.Themes.Flat/Theme.xaml
+++ b/Lib/Xceed.Wpf.AvalonDock.Themes.Flat/Theme.xaml
@@ -119,7 +119,7 @@
                                 VerticalAlignment="Center"
                                 Grid.Column="1">
                                 <avalonDockControls:DropDownButton.DropDownContextMenu>
-                                    <avalonDockControls:ContextMenuEx
+                                    <avalonDockControls:ContextMenuEx Style="{DynamicResource ContextMenuStyle}"
                                         ItemsSource="{Binding Model.ChildrenSorted, RelativeSource={RelativeSource TemplatedParent}}">
                                         <avalonDockControls:ContextMenuEx.ItemContainerStyle>
                                             <Style TargetType="{x:Type avalonDockControls:MenuItemEx}" BasedOn="{StaticResource {x:Type MenuItem}}">
