--- a/TradeHubGui/Views/MarketScannerContentView.xaml
+++ b/TradeHubGui/Views/MarketScannerContentView.xaml
@@ -1,17 +1,44 @@
 ﻿<UserControl x:Class="TradeHubGui.Views.MarketScannerContentView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
+    <UserControl.Resources>
+        <ContextMenu  x:Key="RowContextMenu" DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource Self}}">
+            <MenuItem Header="Limit Order Book"
+                      CommandParameter="{Binding}"
+                      Command="{Binding DataContext.ShowLimitOrderBookCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGrid}}" />
+            <MenuItem Header="Chart"
+                      CommandParameter="{Binding}"
+                      Command="{Binding DataContext.ShowChartCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGrid}}" />
+            <Separator/>
+            <MenuItem Header="Send Order"
+                      CommandParameter="{Binding}"
+                      Command="{Binding DataContext.SendOrderCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGrid}}" />
+            <MenuItem Header="Unsubsribe"
+                      CommandParameter="{Binding}"
+                      Command="{Binding DataContext.UnsubscribeCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGrid}}" />
+            <Separator/>
+            <MenuItem Header="Position Stats"
+                      CommandParameter="{Binding}"
+                      Command="{Binding DataContext.ShowPositionStatsCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGrid}}" />
+        </ContextMenu>
 
+        <Style x:Key="DefaultRowStyle" TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource {x:Type DataGridRow}}">
+            <Setter Property="ContextMenu" Value="{StaticResource RowContextMenu}" />
+        </Style>
+    </UserControl.Resources>
+    
     <DockPanel Background="#FFEEEEEE">
         
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="10,10,10,0">
+        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="10">
             <Label Content="Symbol for scannig"/>
-            <TextBox Text="{Binding NewSymbol}" Width="100" Margin="0,0,10,0"/>
-            <Button Content="Add"/>
+            <TextBox Text="{Binding NewSymbol, UpdateSourceTrigger=PropertyChanged}" Width="100" Margin="0,0,10,0"/>
+            <Button Content="Add" Command="{Binding AddNewSymbolCommand}"/>
         </StackPanel>
         
-        <DataGrid x:Name="MarketDataGrid" Margin="10"
+        <DataGrid x:Name="MarketDataGrid" Margin="1"
                   ItemsSource="{Binding Instruments}"
+                  SelectedItem="{Binding SelectedInstrument}"
                   SelectionMode="Single" 
                   IsTextSearchEnabled="True"
                   IsSynchronizedWithCurrentItem="True"
@@ -20,7 +47,8 @@
                   IsReadOnly="True"
                   SelectionUnit="FullRow"
                   AutoGenerateColumns="False"
-                  RowHeight="22">
+                  RowHeight="22"
+                  RowStyle="{StaticResource DefaultRowStyle}">
 
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Symbol" Width="70" Binding="{Binding Path=Symbol}" />
